--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "bottler-simulator",
   "version": "1.0.0",
@@ -10,12 +9,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-spring": "^9.6.2",
-    "react-use-gesture": "^10.2.12"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0"
